@@ -1,3 +1,8 @@
+2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>
+
+	* NSOutlineView-test/NSOutlineView-test.m: Reindented more sensibly and 
+	rearranged a bit the if else statements logic to be simpler.
+
 2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>
 
 	* Composite-test/GNUmakefile: Updated definition of
